# grpc

./: .Rbuildignore  .gitattributes  .gitignore  DESCRIPTION  NAMESPACE  README.md  aclocal.m4  configure  configure.ac  configure~  grpc.Rproj
.github/workflows/: R-CMD-check.yaml
R/: GrpcClient.R  GrpcLogger.R  GrpcServer.R  ProtoParser.R  RcppExports.R  client.R  grpc-package.R  logging.R  parser.R  server.R  utils.R  zzz.r
demo/: 00Index  client-test2.r  health-check-client.R  health-check-server.R  helloclient.R  helloserver.R  iris-client.R  iris-server.R  min-demo.R  server-test1.r
man/: GrpcClient.Rd  GrpcLogger.Rd  GrpcServer.Rd  ProtoParser.Rd  grapes-or-or-grapes.Rd  grpc_client.Rd  grpc_default_hooks.Rd  newResponse.Rd  read_services.Rd  rgrpc_set_core_logging.Rd  start_server.Rd
src/: Makevars.in  Makevars.win  RcppExports.cpp  client-old.cpp  client.cpp  common.h  config.h.in  logging.cpp  minimal_server.cpp  onload.c.bak  server.cpp
tests/: testthat.R
tests/testthat/: helper-proto.R  test-GrpcClient.R  test-GrpcServer.R  test-ProtoParser.R  test-grpc-logger.R  test-unary_call.R
